# shiny-happiness

./: .gitignore  COMMANDS.md  Dockerfile  README.md  compare_runs.py  docker-compose.yaml  environment.yml  fix_conda_network.py  install_torch_spline_conv.bat  install_torch_spline_conv.ps1  install_torch_spline_conv.py  mlflow_to_matplotlib.py  molecule_history.py  moler_patched_train.py  pyproject.toml  run_gan_v20.ps1  安装指南.md
DiGress/: sbatch.py
DiGress/configs/: config.yaml
DiGress/dgd/: diffusion_model.py  diffusion_model_discrete.py  main.py  utils.py
GraphINVENT/: submit-pre-training.py
GraphINVENT/graphinvent/: DataProcesser.py  GraphGenerator.py  MolecularGraph.py  ScoringFunction.py  util.py
GraphINVENT/tools/: atom_types.py  formal_charges.py  max_n_nodes.py  utils.py
Molecule-RNN/: dataloader.py  sample.py  train.py  train.yaml
Molecule-RNN/vocab/: chembl_char_vocab.py  chembl_regex_vocab.py  chembl_selfies_vocab.py
ccgvae/: CCGVAE.py  ccgvae_env.yml  make_dataset.py
ccgvae/model/: GGNN_core.py  data_augmentation.py
ccgvae/utils/: utils.py
data_creation/: chembl_to_fol_and_smiles.py  create_molecules.py  fo2_sampled_to_our_input_format.py  infer_skipbonds.py  ontology_hydrocarbons-alkanes  ontology_min  skipBond.pl
data_efficient_grammar/: main.py  retro_star_listener.py
gan/: graph_transformer.py  mlflow_utils.py  parse.py  train.py  train1.py  train_v20.py
gan/layers/: graph_transformer_layer.py
gan/result/: color1.xlsx  (+1 more)
nmln/: dataset.py  handler.py  ontology.py  parser.py  utils.py
rgcvae/: RGIVAE.py  rgivae_env.yml
(+202 files in other folders)
